# LARM_pibot23

./: .gitignore  README.md  TODO.md  tutosim_launch.yaml
grp_pibot23/: CMakeLists.txt  package.xml
grp_pibot23/launch/: operator_launch.yaml  simulation_v1_launch.yaml  simulation_v2_launch.yaml  tbot_v1_launch.yaml  tbot_v2_launch.yaml  vision_launch.yaml
grp_pibot23/lib_import/: scan_echo.py
grp_pibot23/rviz/: rviz_simulation_1.rviz  rviz_simulation_2.rviz  rviz_tbot.rviz  rviz_tbot_v2.rviz
grp_pibot23/src/: ghost_marker_publisher  global_goal_publisher  goal_handler  map_subscriber  operator_node  pacman_marker_publisher  pathfinding  pathfinding_1  pathfinding_2  pathfinding_function_1  vision_robot  vision_robot_2
grp_pibot23/stl/: pacman.stl
tuto_vision/: CMakeLists.txt  package.xml
tuto_vision/launch/: vision_Nshow.yaml  vision_show.yaml
tuto_vision/src/: eruihfvu.py  test-camera.py  vision  vision_robot  vision_step_step.py
tutorial_pkg/: CMakeLists.txt  package.xml
tutorial_pkg/launch/: bumper_test_launch.yaml  ghost_pacman_pub_launch.yaml  launch_rviz.yaml  operator_launch.yaml  reality_move_to_launch.yaml  simulation_launch.yaml  simulation_move_to_launch.yaml  simulation_v2_launch.yaml  tbot_v1_launch.yaml  tbot_v2_launch.yaml  virtual_simul_launch.yaml  vision_launch.yaml
tutorial_pkg/lib_import/: move_robot.py  move_robot_simul.py  read_Bumper.py
tutorial_pkg/map/: map1.pgm  map1.yaml  map2.pgm  map2.xcf  map2.yaml  map2_1.pgm
tutorial_pkg/old/: test_move  test_move_simul  tourner
tutorial_pkg/rviz/: rviz_config_robot.rviz  rviz_marker.rviz  rviz_move_to.rviz  rviz_tbot.rviz
tutorial_pkg/scripts/: fantome_marker_publisher  ghost_marker_publisher  global_goal_publisher  goal_handler  listen_bumper  localGoal  localGoal.py  map_subscriber  operator_node  pacman_marker_publisher  pathfinding  pathfinding_simulation  pathfinding_tuto  read_Bumper  read_info  scan_echo  straight  test_move  test_move_simul  testmoveto  testpaul.py
tutorial_pkg/stl/: Ghost-8x3.stl  Pacman-6x3.stl  ghost.stl
